// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Banner > handles newlines in text 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ Line 1                                                                       │
│ Line 2                                                                       │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Banner > renders error variant 1`] = `
"╭──────────────────────────────────────────────────────────╮
│ Error occurred                                           │
╰──────────────────────────────────────────────────────────╯"
`;

exports[`Banner > renders in info mode 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ Info Message                                                                 │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Banner > renders in warning mode 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ Warning Message                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Banner > renders success variant 1`] = `
"╭──────────────────────────────────────────────────────────╮
│ Success!                                                 │
╰──────────────────────────────────────────────────────────╯"
`;

exports[`Banner shorthand components > renders ErrorBanner 1`] = `
"╭────────────────────────────────────────────────╮
│ Something went wrong                           │
╰────────────────────────────────────────────────╯"
`;

exports[`Banner shorthand components > renders SuccessBanner 1`] = `
"╭────────────────────────────────────────────────╮
│ Operation completed                            │
╰────────────────────────────────────────────────╯"
`;

exports[`Banner shorthand components > renders WarningBanner 1`] = `
"╭────────────────────────────────────────────────╮
│ Proceed with caution                           │
╰────────────────────────────────────────────────╯"
`;

exports[`InfoBox > renders children with border 1`] = `
"╭──────────────────────────────────────╮
│ Some content here                    │
╰──────────────────────────────────────╯"
`;
